fixed button visibility on settings page

--- a/css/settings.css
+++ b/css/settings.css
@@ -66,7 +66,3 @@ button#reset {
 #add-folder-container td {
 	padding: 6px 0 13px;
 }
-
-de_cbutton#de-cute-id {
-	visibility: visible !important;
-}
